# french_resturants

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_preparation.ipynb  02_data_visualization.ipynb  03_null_handling_and_imputation.ipynb  04_model_preparation.ipynb
src/: data_preparation_utilis.py  data_preparation_utils.py  model_utils.py  plot_model_comparisons.py
