[tool.poetry]
name = "french-resturants"
version = "0.1.0"
description = ""
authors = ["idoschw3 <ido.schwartz.il@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
autoviz = "^0.1.905"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
